add gcs and update aws online file storage upload service

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,7 @@ NODE_ENV=development
  AWS_SECRET_KEY=xxxx
  AWS_REGION=xxxx
  AWS_S3_BUCKET=xxxx
+
+# GCS CREDENTIALS
+GCS_BUCKET_NAME=xxxx
+GCS_KEYFILE_JSON=xxxx/xxxx.json
