--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@google-cloud/storage": "^5.1.1",
     "aws-sdk": "^2.702.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
